[gd_scene load_steps=6 format=3 uid="uid://cpkeimcbnlieh"]

[ext_resource type="Script" path="res://scripts/start.gd" id="1_mynu6"]
[ext_resource type="Theme" uid="uid://b4lwrp76mgmre" path="res://themes/default.tres" id="2_a55ji"]
[ext_resource type="Texture2D" uid="uid://bw4ssopa7p8c5" path="res://assets/Space Sprite Sheet.png" id="3_x0vql"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_18ikw"]
texture = ExtResource("3_x0vql")
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
8:0/0 = 0
9:0/0 = 0
10:0/0 = 0
11:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
6:1/0 = 0
7:1/0 = 0
8:1/0 = 0
9:1/0 = 0
10:1/0 = 0
11:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
7:2/0 = 0
8:2/0 = 0
9:2/0 = 0
10:2/0 = 0
11:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
5:3/0 = 0
6:3/0 = 0
7:3/0 = 0
8:3/0 = 0
9:3/0 = 0
10:3/0 = 0
11:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0
6:4/0 = 0
7:4/0 = 0
8:4/0 = 0
9:4/0 = 0
10:4/0 = 0
11:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
5:5/0 = 0
6:5/0 = 0
7:5/0 = 0
8:5/0 = 0
9:5/0 = 0
10:5/0 = 0
11:5/0 = 0
0:6/0 = 0
1:6/0 = 0
2:6/0 = 0
3:6/0 = 0
4:6/0 = 0
5:6/0 = 0
6:6/0 = 0
7:6/0 = 0
8:6/0 = 0
9:6/0 = 0
10:6/0 = 0
11:6/0 = 0
0:7/0 = 0
1:7/0 = 0
2:7/0 = 0
3:7/0 = 0
4:7/0 = 0
5:7/0 = 0
6:7/0 = 0
7:7/0 = 0
8:7/0 = 0
9:7/0 = 0
10:7/0 = 0
11:7/0 = 0
0:8/0 = 0
1:8/0 = 0
2:8/0 = 0
3:8/0 = 0
4:8/0 = 0
5:8/0 = 0
6:8/0 = 0
7:8/0 = 0
8:8/0 = 0
9:8/0 = 0
10:8/0 = 0
11:8/0 = 0
0:9/0 = 0
1:9/0 = 0
2:9/0 = 0
3:9/0 = 0
4:9/0 = 0
5:9/0 = 0
6:9/0 = 0
7:9/0 = 0
8:9/0 = 0
9:9/0 = 0
10:9/0 = 0
11:9/0 = 0
0:10/0 = 0
1:10/0 = 0
2:10/0 = 0
3:10/0 = 0
4:10/0 = 0
5:10/0 = 0
6:10/0 = 0
7:10/0 = 0
8:10/0 = 0
9:10/0 = 0
10:10/0 = 0
11:10/0 = 0
0:11/0 = 0
1:11/0 = 0
2:11/0 = 0
3:11/0 = 0
4:11/0 = 0
5:11/0 = 0
6:11/0 = 0
7:11/0 = 0
8:11/0 = 0
9:11/0 = 0
10:11/0 = 0
11:11/0 = 0

[sub_resource type="TileSet" id="TileSet_fgprl"]
sources/1 = SubResource("TileSetAtlasSource_18ikw")

[node name="Start" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -2.0
offset_bottom = 2.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.00581, 0.996303)
size_flags_horizontal = 6
size_flags_vertical = 3
theme = ExtResource("2_a55ji")
script = ExtResource("1_mynu6")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 0

[node name="GridContainer" type="GridContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 6
theme_override_constants/v_separation = 60

[node name="Title" type="Label" parent="VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "Propulsion"

[node name="GridContainer" type="GridContainer" parent="VBoxContainer/GridContainer"]
layout_mode = 2
theme_override_constants/v_separation = 40

[node name="Play" type="Button" parent="VBoxContainer/GridContainer/GridContainer"]
layout_direction = 1
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 6
auto_translate = false
localize_numeral_system = false
theme = ExtResource("2_a55ji")
text = "Play
"

[node name="Style" type="Button" parent="VBoxContainer/GridContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "Style"

[node name="Exit" type="Button" parent="VBoxContainer/GridContainer/GridContainer"]
layout_direction = 1
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
auto_translate = false
text = "Exit"

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="Layer" type="ParallaxLayer" parent="ParallaxBackground"]
motion_mirroring = Vector2(1150, 0)

[node name="TileMap" type="TileMap" parent="ParallaxBackground/Layer"]
scale = Vector2(3, 3)
tile_set = SubResource("TileSet_fgprl")
format = 2
layer_0/tile_data = PackedInt32Array(0, 524289, 8, 65536, 524289, 9, 131072, 524289, 10, 196608, 524289, 11, 1, 589825, 8, 65537, 589825, 9, 131073, 589825, 10, 196609, 589825, 11, 2, 655361, 8, 65538, 655361, 9, 131074, 655361, 10, 196610, 655361, 11, 3, 720897, 8, 65539, 720897, 9, 131075, 720897, 10, 196611, 720897, 11, 4, 524289, 8, 65540, 524289, 9, 131076, 524289, 10, 196612, 524289, 11, 5, 589825, 8, 65541, 589825, 9, 131077, 589825, 10, 196613, 589825, 11, 6, 655361, 8, 65542, 655361, 9, 131078, 655361, 10, 196614, 655361, 11, 7, 720897, 8, 65543, 720897, 9, 131079, 720897, 10, 196615, 720897, 11, 8, 524289, 8, 65544, 524289, 9, 131080, 524289, 10, 196616, 524289, 11, 9, 589825, 8, 65545, 589825, 9, 131081, 589825, 10, 196617, 589825, 11, 10, 655361, 8, 65546, 655361, 9, 131082, 655361, 10, 196618, 655361, 11, 11, 720897, 8, 65547, 720897, 9, 131083, 720897, 10, 196619, 720897, 11, 12, 524289, 8, 65548, 524289, 9, 131084, 524289, 10, 196620, 524289, 11, 13, 589825, 8, 65549, 589825, 9, 131085, 589825, 10, 196621, 589825, 11, 14, 655361, 8, 65550, 655361, 9, 131086, 655361, 10, 196622, 655361, 11, 15, 720897, 8, 65551, 720897, 9, 131087, 720897, 10, 196623, 720897, 11, 262144, 524289, 8, 327680, 524289, 9, 393216, 524289, 10, 458752, 524289, 11, 262145, 589825, 8, 327681, 589825, 9, 393217, 589825, 10, 458753, 589825, 11, 262146, 655361, 8, 327682, 655361, 9, 393218, 655361, 10, 458754, 655361, 11, 262147, 720897, 8, 327683, 720897, 9, 393219, 720897, 10, 458755, 720897, 11, 262148, 524289, 8, 327684, 524289, 9, 393220, 524289, 10, 458756, 524289, 11, 262149, 589825, 8, 327685, 589825, 9, 393221, 589825, 10, 458757, 589825, 11, 262150, 655361, 8, 327686, 655361, 9, 393222, 655361, 10, 458758, 655361, 11, 262151, 720897, 8, 327687, 720897, 9, 393223, 720897, 10, 458759, 720897, 11, 262152, 524289, 8, 327688, 524289, 9, 393224, 524289, 10, 458760, 524289, 11, 262153, 589825, 8, 327689, 589825, 9, 393225, 589825, 10, 458761, 589825, 11, 262154, 655361, 8, 327690, 655361, 9, 393226, 655361, 10, 458762, 655361, 11, 262155, 720897, 8, 327691, 720897, 9, 393227, 720897, 10, 458763, 720897, 11, 262156, 524289, 8, 327692, 524289, 9, 393228, 524289, 10, 458764, 524289, 11, 262157, 589825, 8, 327693, 589825, 9, 393229, 589825, 10, 458765, 589825, 11, 262158, 655361, 8, 327694, 655361, 9, 393230, 655361, 10, 458766, 655361, 11, 262159, 720897, 8, 327695, 720897, 9, 393231, 720897, 10, 458767, 720897, 11, 524288, 524289, 8, 589824, 524289, 9, 655360, 524289, 10, 720896, 524289, 11, 524289, 589825, 8, 589825, 589825, 9, 655361, 589825, 10, 720897, 589825, 11, 524290, 655361, 8, 589826, 655361, 9, 655362, 655361, 10, 720898, 655361, 11, 524291, 720897, 8, 589827, 720897, 9, 655363, 720897, 10, 720899, 720897, 11, 524292, 524289, 8, 589828, 524289, 9, 655364, 524289, 10, 720900, 524289, 11, 524293, 589825, 8, 589829, 589825, 9, 655365, 589825, 10, 720901, 589825, 11, 524294, 655361, 8, 589830, 655361, 9, 655366, 655361, 10, 720902, 655361, 11, 524295, 720897, 8, 589831, 720897, 9, 655367, 720897, 10, 720903, 720897, 11, 524296, 524289, 8, 589832, 524289, 9, 655368, 524289, 10, 720904, 524289, 11, 524297, 589825, 8, 589833, 589825, 9, 655369, 589825, 10, 720905, 589825, 11, 524298, 655361, 8, 589834, 655361, 9, 655370, 655361, 10, 720906, 655361, 11, 524299, 720897, 8, 589835, 720897, 9, 655371, 720897, 10, 720907, 720897, 11, 524300, 524289, 8, 589836, 524289, 9, 655372, 524289, 10, 720908, 524289, 11, 524301, 589825, 8, 589837, 589825, 9, 655373, 589825, 10, 720909, 589825, 11, 524302, 655361, 8, 589838, 655361, 9, 655374, 655361, 10, 720910, 655361, 11, 524303, 720897, 8, 589839, 720897, 9, 655375, 720897, 10, 720911, 720897, 11, 786432, 524289, 8, 851968, 524289, 9, 917504, 524289, 10, 983040, 524289, 11, 786433, 589825, 8, 851969, 589825, 9, 917505, 589825, 10, 983041, 589825, 11, 786434, 655361, 8, 851970, 655361, 9, 917506, 655361, 10, 786435, 720897, 8, 851971, 720897, 9, 917507, 720897, 10, 786436, 524289, 8, 851972, 524289, 9, 917508, 524289, 10, 786437, 589825, 8, 851973, 589825, 9, 917509, 589825, 10, 786438, 655361, 8, 851974, 655361, 9, 917510, 655361, 10, 786439, 720897, 8, 851975, 720897, 9, 917511, 720897, 10, 786440, 524289, 8, 851976, 524289, 9, 917512, 524289, 10, 786441, 589825, 8, 851977, 589825, 9, 917513, 589825, 10, 983049, 589825, 11, 786442, 655361, 8, 851978, 655361, 9, 917514, 655361, 10, 983050, 655361, 11, 786443, 720897, 8, 851979, 720897, 9, 917515, 720897, 10, 983051, 720897, 11, 786444, 524289, 8, 851980, 524289, 9, 917516, 524289, 10, 983052, 524289, 11, 786445, 589825, 8, 851981, 589825, 9, 917517, 589825, 10, 983053, 589825, 11, 786446, 655361, 8, 851982, 655361, 9, 917518, 655361, 10, 983054, 655361, 11, 786447, 720897, 8, 851983, 720897, 9, 917519, 720897, 10, 983055, 720897, 11, 327704, 524289, 9, 393240, 524289, 10, 655377, 589825, 10, 458770, 655361, 11, 524306, 655361, 8, 589842, 655361, 9, 655378, 655361, 10, 458771, 720897, 11, 524307, 720897, 8, 589843, 720897, 9, 655379, 720897, 10, 458772, 524289, 11, 524308, 524289, 8, 589844, 524289, 9, 655380, 524289, 10, 720913, 589825, 11, 786449, 589825, 8, 851985, 589825, 9, 917521, 589825, 10, 720914, 655361, 11, 786450, 655361, 8, 851986, 655361, 9, 917522, 655361, 10, 720915, 720897, 11, 786451, 720897, 8, 851987, 720897, 9, 917523, 720897, 10, 720916, 524289, 11, 786452, 524289, 8, 851988, 524289, 9, 917524, 524289, 10, 393234, 655361, 10, 327699, 720897, 9, 393235, 720897, 10, 524311, 720897, 8, 589847, 720897, 9, 655383, 720897, 10, 655384, 524289, 10, 786454, 655361, 8, 851990, 655361, 9, 917526, 655361, 10, 720919, 720897, 11, 786455, 720897, 8, 851991, 720897, 9, 917527, 720897, 10, 720920, 524289, 11, 786456, 524289, 8, 851992, 524289, 9, 917528, 524289, 10, 196633, 589825, 11, 262169, 589825, 8, 327705, 589825, 9, 393241, 589825, 10, 327706, 655361, 9, 393242, 655361, 10, 524313, 589825, 8, 524314, 655361, 8, 589850, 655361, 9, 655386, 655361, 10, 720921, 589825, 11, 786457, 589825, 8, 851993, 589825, 9, 917529, 589825, 10, 786458, 655361, 8, 851994, 655361, 9, 917530, 655361, 10, 983062, 655361, 11, 983063, 720897, 11, 983064, 524289, 11, 983057, 589825, 11, 983058, 655361, 11, 983059, 720897, 11, 983065, 589825, 11, 983066, 655361, 11, 16, 524289, 8, 65552, 524289, 9, 131088, 524289, 10, 196624, 524289, 11, 17, 589825, 8, 262160, 524289, 8, 327696, 524289, 9, 393232, 524289, 10, 458768, 524289, 11, 917520, 524289, 10, 983056, 524289, 11, 131095, 720897, 10, 26, 655361, 8, 65562, 655361, 9, 131098, 655361, 10, 196634, 655361, 11, 262170, 655361, 8, 25, 589825, 8, 65560, 524289, 9, 131096, 524289, 10, 196632, 524289, 11, 65561, 589825, 9, 131097, 589825, 10, 262168, 524289, 8, 24, 524289, 8, 23, 720897, 8, 65559, 720897, 9, 22, 655361, 8, 21, 589825, 8, 65557, 589825, 9, 65556, 524289, 9, 20, 524289, 8, 131091, 720897, 10, 196627, 720897, 11, 262163, 720897, 8, 27, 524289, 8, 65563, 524289, 9, 131099, 524289, 10, 196635, 524289, 11, 28, 589825, 8, 65564, 589825, 9, 131100, 589825, 10, 196636, 589825, 11, 29, 655361, 8, 65565, 655361, 9, 131101, 655361, 10, 196637, 655361, 11, 30, 720897, 8, 65566, 720897, 9, 131102, 720897, 10, 196638, 720897, 11, 458778, 655361, 11, 458777, 589825, 11, 458776, 524289, 11, 720922, 655361, 11, 655385, 589825, 10, 589849, 589825, 9, 589848, 524289, 9, 524312, 524289, 8, 458775, 720897, 11, 393239, 720897, 10, 327703, 720897, 9, 262167, 720897, 8, 196631, 720897, 11, 196630, 655361, 11, 131094, 655361, 10, 65558, 655361, 9, 262166, 655361, 8, 327702, 655361, 9, 393237, 589825, 10, 393236, 524289, 10, 327700, 524289, 9, 262164, 524289, 8, 196628, 524289, 11, 196629, 589825, 11, 131093, 589825, 10, 393238, 655361, 10, 458774, 655361, 11, 524310, 655361, 8, 589845, 589825, 9, 655381, 589825, 10, 524309, 589825, 8, 458773, 589825, 11, 327701, 589825, 9, 262165, 589825, 8, 720917, 589825, 11, 786453, 589825, 8, 851989, 589825, 9, 917525, 589825, 10, 720918, 655361, 11, 655382, 655361, 10, 589846, 655361, 9, 131092, 524289, 10, 65555, 720897, 9, 19, 720897, 8, 18, 655361, 8, 65554, 655361, 9, 131090, 655361, 10, 196626, 655361, 11, 262161, 589825, 8, 327697, 589825, 9, 393233, 589825, 10, 458769, 589825, 11, 524305, 589825, 8, 589841, 589825, 9, 327698, 655361, 9, 262162, 655361, 8, 196625, 589825, 11, 524304, 524289, 8, 589840, 524289, 9, 655376, 524289, 10, 720912, 524289, 11, 786448, 524289, 8, 851984, 524289, 9, 131089, 589825, 10, 65553, 589825, 9, 262171, 524289, 8, 327707, 524289, 9, 393243, 524289, 10, 458779, 524289, 11, 262172, 589825, 8, 327708, 589825, 9, 393244, 589825, 10, 458780, 589825, 11, 262173, 655361, 8, 327709, 655361, 9, 393245, 655361, 10, 458781, 655361, 11, 262174, 720897, 8, 327710, 720897, 9, 393246, 720897, 10, 458782, 720897, 11, 524315, 524289, 8, 589851, 524289, 9, 655387, 524289, 10, 720923, 524289, 11, 524316, 589825, 8, 589852, 589825, 9, 655388, 589825, 10, 720924, 589825, 11, 524317, 655361, 8, 589853, 655361, 9, 655389, 655361, 10, 720925, 655361, 11, 524318, 720897, 8, 589854, 720897, 9, 655390, 720897, 10, 720926, 720897, 11, 786459, 524289, 8, 851995, 524289, 9, 917531, 524289, 10, 983067, 524289, 11, 786460, 589825, 8, 851996, 589825, 9, 917532, 589825, 10, 983068, 589825, 11, 786461, 655361, 8, 851997, 655361, 9, 917533, 655361, 10, 983069, 655361, 11, 786462, 720897, 8, 851998, 720897, 9, 917534, 720897, 10, 983070, 720897, 11, 786463, 524289, 8, 851999, 524289, 9, 917535, 524289, 10, 983071, 524289, 11, 786464, 589825, 8, 852000, 589825, 9, 917536, 589825, 10, 983072, 589825, 11, 786465, 655361, 8, 852001, 655361, 9, 917537, 655361, 10, 983073, 655361, 11, 786466, 720897, 8, 852002, 720897, 9, 917538, 720897, 10, 983074, 720897, 11, 786467, 524289, 8, 852003, 524289, 9, 917539, 524289, 10, 983075, 524289, 11, 786468, 589825, 8, 852004, 589825, 9, 917540, 589825, 10, 983076, 589825, 11, 786469, 655361, 8, 852005, 655361, 9, 917541, 655361, 10, 983077, 655361, 11, 786470, 720897, 8, 852006, 720897, 9, 917542, 720897, 10, 983078, 720897, 11, 786471, 524289, 8, 852007, 524289, 9, 917543, 524289, 10, 983079, 524289, 11, 786472, 589825, 8, 852008, 589825, 9, 917544, 589825, 10, 983080, 589825, 11, 786473, 655361, 8, 852009, 655361, 9, 917545, 655361, 10, 983081, 655361, 11, 786474, 720897, 8, 852010, 720897, 9, 917546, 720897, 10, 983082, 720897, 11, 524327, 524289, 8, 589863, 524289, 9, 655399, 524289, 10, 720935, 524289, 11, 524328, 589825, 8, 589864, 589825, 9, 655400, 589825, 10, 720936, 589825, 11, 524329, 655361, 8, 589865, 655361, 9, 655401, 655361, 10, 720937, 655361, 11, 524330, 720897, 8, 589866, 720897, 9, 655402, 720897, 10, 720938, 720897, 11, 262183, 524289, 8, 327719, 524289, 9, 393255, 524289, 10, 458791, 524289, 11, 262184, 589825, 8, 327720, 589825, 9, 393256, 589825, 10, 458792, 589825, 11, 262185, 655361, 8, 327721, 655361, 9, 393257, 655361, 10, 458793, 655361, 11, 262186, 720897, 8, 327722, 720897, 9, 393258, 720897, 10, 458794, 720897, 11, 39, 524289, 8, 65575, 524289, 9, 131111, 524289, 10, 196647, 524289, 11, 40, 589825, 8, 65576, 589825, 9, 131112, 589825, 10, 196648, 589825, 11, 41, 655361, 8, 65577, 655361, 9, 131113, 655361, 10, 196649, 655361, 11, 42, 720897, 8, 65578, 720897, 9, 131114, 720897, 10, 196650, 720897, 11, 35, 524289, 8, 65571, 524289, 9, 131107, 524289, 10, 196643, 524289, 11, 36, 589825, 8, 65572, 589825, 9, 131108, 589825, 10, 196644, 589825, 11, 37, 655361, 8, 65573, 655361, 9, 131109, 655361, 10, 196645, 655361, 11, 38, 720897, 8, 65574, 720897, 9, 131110, 720897, 10, 196646, 720897, 11, 31, 524289, 8, 65567, 524289, 9, 131103, 524289, 10, 196639, 524289, 11, 32, 589825, 8, 65568, 589825, 9, 131104, 589825, 10, 196640, 589825, 11, 33, 655361, 8, 65569, 655361, 9, 131105, 655361, 10, 196641, 655361, 11, 34, 720897, 8, 65570, 720897, 9, 131106, 720897, 10, 196642, 720897, 11, 262175, 524289, 8, 327711, 524289, 9, 393247, 524289, 10, 458783, 524289, 11, 262176, 589825, 8, 327712, 589825, 9, 393248, 589825, 10, 458784, 589825, 11, 262177, 655361, 8, 327713, 655361, 9, 393249, 655361, 10, 458785, 655361, 11, 262178, 720897, 8, 327714, 720897, 9, 393250, 720897, 10, 458786, 720897, 11, 524319, 524289, 8, 589855, 524289, 9, 655391, 524289, 10, 720927, 524289, 11, 524320, 589825, 8, 589856, 589825, 9, 655392, 589825, 10, 720928, 589825, 11, 524321, 655361, 8, 589857, 655361, 9, 655393, 655361, 10, 720929, 655361, 11, 524322, 720897, 8, 589858, 720897, 9, 655394, 720897, 10, 720930, 720897, 11, 262179, 524289, 8, 327715, 524289, 9, 393251, 524289, 10, 458787, 524289, 11, 262180, 589825, 8, 327716, 589825, 9, 393252, 589825, 10, 458788, 589825, 11, 262181, 655361, 8, 327717, 655361, 9, 393253, 655361, 10, 458789, 655361, 11, 262182, 720897, 8, 327718, 720897, 9, 393254, 720897, 10, 458790, 720897, 11, 524323, 524289, 8, 589859, 524289, 9, 655395, 524289, 10, 720931, 524289, 11, 524324, 589825, 8, 589860, 589825, 9, 655396, 589825, 10, 720932, 589825, 11, 524325, 655361, 8, 589861, 655361, 9, 655397, 655361, 10, 720933, 655361, 11, 524326, 720897, 8, 589862, 720897, 9, 655398, 720897, 10, 720934, 720897, 11, 43, 524289, 8, 65579, 524289, 9, 131115, 524289, 10, 196651, 524289, 11, 44, 589825, 8, 65580, 589825, 9, 131116, 589825, 10, 196652, 589825, 11, 45, 655361, 8, 65581, 655361, 9, 131117, 655361, 10, 196653, 655361, 11, 46, 720897, 8, 65582, 720897, 9, 131118, 720897, 10, 196654, 720897, 11, 262187, 524289, 8, 327723, 524289, 9, 393259, 524289, 10, 458795, 524289, 11, 262188, 589825, 8, 327724, 589825, 9, 393260, 589825, 10, 458796, 589825, 11, 262189, 655361, 8, 327725, 655361, 9, 393261, 655361, 10, 458797, 655361, 11, 262190, 720897, 8, 327726, 720897, 9, 393262, 720897, 10, 458798, 720897, 11, 524331, 524289, 8, 589867, 524289, 9, 655403, 524289, 10, 720939, 524289, 11, 524332, 589825, 8, 589868, 589825, 9, 655404, 589825, 10, 720940, 589825, 11, 524333, 655361, 8, 589869, 655361, 9, 655405, 655361, 10, 720941, 655361, 11, 524334, 720897, 8, 589870, 720897, 9, 655406, 720897, 10, 720942, 720897, 11, 786475, 524289, 8, 852011, 524289, 9, 917547, 524289, 10, 983083, 524289, 11, 786476, 589825, 8, 852012, 589825, 9, 917548, 589825, 10, 983084, 589825, 11, 786477, 655361, 8, 852013, 655361, 9, 917549, 655361, 10, 983085, 655361, 11, 786478, 720897, 8, 852014, 720897, 9, 917550, 720897, 10, 983086, 720897, 11, 983061, 589825, 11, 983060, 524289, 11, 983048, 524289, 11, 983047, 720897, 11, 983046, 655361, 11, 983045, 589825, 11, 983044, 524289, 11, 983043, 720897, 11, 983042, 655361, 11)

[connection signal="pressed" from="VBoxContainer/GridContainer/GridContainer/Play" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="VBoxContainer/GridContainer/GridContainer/Style" to="." method="_on_style_pressed"]
[connection signal="pressed" from="VBoxContainer/GridContainer/GridContainer/Exit" to="." method="_on_exit_button_pressed"]
